--- a/services.html
+++ b/services.html
@@ -42,11 +42,11 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
-<p>We offer support with ecological research - be it field surveys or experimental studies - across both terrestrial and marine environments. 
+<p>We offer support with ecological research — be it field surveys or experimental studies — across both terrestrial and marine environments. 
   We can work with you to find the most effective, evidence-based options for managing habitats in your particular setting.</p>
 <p>Our experience covers...</p>
 <ul>
-  <li><strong>Ecological studies</strong> - We can design and carry out surveys and experiments to help answer your ecological questions.
+  <li><strong>Ecological studies</strong> — We can design and carry out surveys and experiments to help answer your ecological questions.
   <li><strong>Habitat and land management</strong> – With particular expertise relating to road verges, public green spaces, farmland, and pollinator habitats.</li>
   <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna conservation, fisheries waste, and monitoring of plastic pollution.</li>
 </ul>
@@ -60,13 +60,13 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
-      <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies - in nature conservation and beyond.</p>
+      <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies — in nature conservation and beyond.</p>
       <p>We have experience with a range of social science methods...</p>
       <ul>
-        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014" target="_blank" rel="noopener noreferrer">of 18,000 adults across England</a> with Natural England, 
+        <li><strong>Questionnaire design</strong> — Including developing surveys <a href="https://doi.org/10.1002/pan3.70014" target="_blank" rel="noopener noreferrer">of 18,000 adults across England</a> with Natural England, 
           and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">relating to pollinators</a>.</li>
-        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">for hazel dormouse</a>.</li>
-        <li><strong>Analysis of digital data sources</strong> - Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381" target="_blank" rel="noopener noreferrer">how people engage with nature</a>.</li>
+        <li><strong>Stakeholder interviews & focus groups</strong> — Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">for hazel dormouse</a>.</li>
+        <li><strong>Analysis of digital data sources</strong> — Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381" target="_blank" rel="noopener noreferrer">how people engage with nature</a>.</li>
       </ul>
     </div>
     <img src="images/fishing-africa.jpg" alt="" class="sidepicture-image">
@@ -77,7 +77,7 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>3. Evidence Synthesis</h2>
-      <p>We are experienced in synthesising evidence to a rigorous scientific standard - from horizon scanning to systematic reviews - helping you to make informed decisions based on the best available knowledge.</p>
+      <p>We are experienced in synthesising evidence to a rigorous scientific standard — from horizon scanning to systematic reviews — helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a> (for The Woodland Trust).</li>
@@ -93,7 +93,7 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>4. Data Services</h2>
-      <p>We can help you with managing, visualising and analysing ecological and social data - 
+      <p>We can help you with managing, visualising and analysing ecological and social data — 
         transforming complex datasets into meaningful insights that support effective decision-making.</p>
       <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
       <p>Examples of our past experience include...</p>
@@ -111,7 +111,7 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>5. Programme development</h2>
-      <p>We can provide you with scientific support across all stages of grant writing and programme development - from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
+      <p>We can provide you with scientific support across all stages of grant writing and programme development — from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
       <p>Our experience includes...</p>
       <ul>
         <li><strong>Grant writing</strong> – With experience as both applicants and reviewers, we can help craft clear, compelling proposals that resonate with funders.</li>
