--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="About Apex Science & Conservation Consultancy - Bridging ecology, people & practice." />
+  <meta name="description" content="About Apex Science & Conservation Consultancy — Bridging ecology, people & practice." />
   <title>About | Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -46,9 +46,9 @@
     <div class="sidepicture-section">
   <div class="sidepicture-text">
     <h2>Our work spans three key areas...</h2>
-    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys and experiments, GIS mapping / analysis,
+    <p>🌿 <b>Ecological Systems</b> — We conduct ecological surveys and experiments, GIS mapping / analysis,
       and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
-    <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
+    <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> — We explore how people engage with nature — their attitudes, values and behaviours — 
       using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
     <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide support with grant writing, programme development, 
       data analysis, and other consultancy services, to support effective, evidence-based conservation.</p>
@@ -72,7 +72,7 @@
       <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
       <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
         supports biodiversity, informs land management, and connects people with nature.</p>
-      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach - 
+      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — 
         partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and impactful. 
         Particular focuses have included pollinator conservation, management of road verges, and understanding 
         people's attitudes and behaviours relating to nature.</p>
