--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-    Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
+    Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats — a synthesis. <i>Ecology Letters</i>. 
     </li>
     <li style="margin-bottom: 1rem;">
       Knapp JL & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
