--- a/publications.html
+++ b/publications.html
@@ -131,7 +131,7 @@
   <h2>Marine Plastic Pollution</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (2023). Predicting the distribution and abundance of abandoned, lost or discarded fishing gear (ALDFG) in the deep sea of the Azores (North Atlantic) 
+      <b>Duncan EM</b> et al. (2023). Predicting the distribution and abundance of abandoned, lost or discarded fishing gear (ALDFG) in the deep sea of the Azores (North Atlantic). 
       <i>Science of The Total Environment</i>, 900: 166579.
       <a href="https://doi.org/10.1016/j.scitotenv.2023.166579" target="_blank" rel="noopener noreferrer">View publication</a>
     </li>
@@ -146,12 +146,12 @@
       <a href="https://doi.org/10.3389/fmars.2021.699521" target="_blank" rel="noopener noreferrer">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Message in a bottle: Open source technology to track the movement of plastic pollution 
+      <b>Duncan EM</b> et al. (2020). Message in a bottle: Open source technology to track the movement of plastic pollution. 
       <i>PLOS ONE</i>, 15: e0242459.
       <a href="https://doi.org/10.1371/journal.pone.0242459" target="_blank" rel="noopener noreferrer">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Microplastic ingestion ubiquitous in marine turtles. 
+      <b>Duncan EM</b> et al. (2019). Microplastic ingestion ubiquitous in marine turtles. 
       <i>Global Change Biology</i>, 25: 744-752. 
       <a href="https://doi.org/10.1111/gcb.14519" target="_blank" rel="noopener noreferrer">View publication</a>
     </li>
