--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="About Apex Science & Conservation Consultancy — Bridging ecology, people & practice." />
-  <title>About | Apex Science & Conservation Consultancy</title>
+  <title>Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <a href="about.html">
+    <a href="index.html">
       <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo">
     </a>
     <nav>
-      <a href="about.html">About</a>
+      <a href="index.html">About</a>
       <a href="services.html">Services</a>
       <a href="testimonials.html">Testimonials</a>
       <a href="publications.html">Publications</a>
