--- a/publications.html
+++ b/publications.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <header>
-    <a href="about.html">
+    <a href="index.html">
       <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo">
     </a>
     <nav>
-      <a href="about.html">About</a>
+      <a href="index.html">About</a>
       <a href="services.html">Services</a>
       <a href="testimonials.html">Testimonials</a>
       <a href="publications.html">Publications</a>
