--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="About Apex Science & Conservation Consultancy — Bridging ecology, people & practice." />
   <title>Apex Science & Conservation Consultancy</title>
+
+   <script>
+    if (window.location.hostname === "www.apex-science.com") {
+      window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
+    }
+  </script>
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
