--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <div>
   <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;" aria-label="Email us">
     <img src="images/email.png" alt="Email us" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
-    <p style="margin: 0; font-weight: 500;">bphillips.consultancy@gmail.com</p>
+    <p style="margin: 0; font-weight: 500;">info@apex-science.co.uk</p>
   </a>
 </div>
 
