--- a/services.html
+++ b/services.html
@@ -137,7 +137,7 @@
   <footer>
   <p class="footer-contact">
     <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
-    <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email Apex Science and Conservation Consultancy"></a>
+    <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
     <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
   </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
