--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo">
+      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Consultancy Logo">
     </a>
     <nav>
       <a href="index.html">About</a>
