--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo">
+      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Consultancy Logo">
     </a>
     <nav>
       <a href="index.html">About</a>
