--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="description" content="About Apex Science & Conservation Consultancy — Bridging ecology, people & practice." />
   <title>Apex Science & Conservation Consultancy</title>
 
-   <script>
+  <script>
     if (window.location.hostname === "www.apex-science.com") {
       window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
     }
   </script>
-  
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,83 +27,82 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  
+
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h1 style="font-size: 2rem; text-align: center;">
-  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  About Us
-    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
-</h1>
+    <h1 style="font-size: 2rem; text-align: center;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+      About Us
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
+    </h1>
 
-  <div style="padding-left: 15%; padding-right: 15%;">
-    <p>
-      At <strong>Apex Science & Conservation</strong>, we provide scientific support and 
-      deliver nature conservation research that is both <strong>rigorous</strong> and 
-      <strong>relevant</strong> to real-world decisions.
-    </p>
-    <p>
-      We partner with <strong>NGOs</strong>, <strong>government agencies</strong> and 
-      <strong>research institutions</strong>, bringing <strong>expertise</strong> and 
-      <strong>capacity</strong> to deliver projects that might not otherwise be possible.
-    </p>
-  </div>
-</section>
-
-  <section>
-    <div class="sidepicture-section">
-  <div class="sidepicture-text">
-    <h2>Our work spans three key areas...</h2>
-    <p>🌿 <b>Ecological Systems</b> — We conduct ecological surveys and experiments, GIS mapping / analysis,
-      and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
-    <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> — We explore how people engage with nature — their attitudes, values and behaviours — 
-      using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
-    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide support with grant writing, programme development, 
-      data analysis, and other consultancy services, to support effective, evidence-based conservation.</p>
-  </div>
-  <img src="images/verge-emily-earth.jpg" alt="Our Work Areas" class="sidepicture-image">
-</div>
-
-    <p style="text-align: center; margin-top: 1.5rem;">
-  For further details on how we can support you and your organisation, see our 
-  <a href="services.html"><b>Services</b></a> page.
-</p>
+    <div style="padding-left: 15%; padding-right: 15%;">
+      <p>
+        At <strong>Apex Science & Conservation</strong>, we provide scientific support and
+        deliver nature conservation research that is both <strong>rigorous</strong> and
+        <strong>relevant</strong> to real-world decisions.
+      </p>
+      <p>
+        We partner with <strong>NGOs</strong>, <strong>government agencies</strong> and
+        <strong>research institutions</strong>, bringing <strong>expertise</strong> and
+        <strong>capacity</strong> to deliver projects that might not otherwise be possible.
+      </p>
+    </div>
   </section>
 
   <section>
-  <h2>Who we are...</h2>
-
-  <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin-top: 2rem;">
-
-    <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
-      <img src="images/photo-ben.jpg" alt="Dr Ben Phillips" style="height: 100%; max-height: 350px; width: auto; border-radius: 8px; margin-bottom: 1rem;">
-      <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
-      <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
-        supports biodiversity, informs land management, and connects people with nature.</p>
-      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — 
-        partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and impactful. 
-        Particular focuses have included pollinator conservation, management of road verges, and understanding 
-        people's attitudes and behaviours relating to nature.</p>
+    <div class="sidepicture-section">
+      <div class="sidepicture-text">
+        <h2>Our work spans three key areas...</h2>
+        <p>🌿 <b>Ecological Systems</b> — We conduct ecological surveys and experiments, GIS mapping / analysis,
+          and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
+        <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> — We explore how people engage with nature — their attitudes, values and behaviours —
+          using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
+        <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide support with grant writing, programme development,
+          data analysis, and other consultancy services, to support effective, evidence-based conservation.</p>
+      </div>
+      <img src="images/verge-emily-earth.jpg" alt="Our Work Areas" class="sidepicture-image">
     </div>
 
-    <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
-      <img src="images/photo-emily.jpg" alt="Dr Emily Duncan" style="height: 100%; max-height: 350px; width: auto; border-radius: 8px; margin-bottom: 1rem;">
-      <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
-      <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research, including as a team member for numerous expeditions.</p>
-      <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list. 
-        Emily is experienced in delivering large collaborative international projects, and feels passionately about combining high-quality science and conservation 
-        with community engagement. She currently sits on the expert panel for DEFRA’s Ocean Community Empowerment and Nature (OCEAN) Grants Programme.</p>
-    </div>
+    <p style="text-align: center; margin-top: 1.5rem;">
+      For further details on how we can support you and your organisation, see our
+      <a href="services.html"><b>Services</b></a> page.
+    </p>
+  </section>
 
-  </div>
-</section>
+  <section>
+    <h2>Who we are...</h2>
+
+    <!-- Updated profiles block -->
+    <div class="profiles" style="margin-top: 2rem;">
+      <div class="profile-card">
+        <img src="images/photo-ben.jpg" alt="Dr Ben Phillips">
+        <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
+        <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that
+          supports biodiversity, informs land management, and connects people with nature.</p>
+        <p>His work combines ecological and social sciences using a collaborative, solution-focused approach —
+          partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and impactful.
+          Particular focuses have included pollinator conservation, management of road verges, and understanding
+          people's attitudes and behaviours relating to nature.</p>
+      </div>
+
+      <div class="profile-card">
+        <img src="images/photo-emily.jpg" alt="Dr Emily Duncan">
+        <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
+        <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research, including as a team member for numerous expeditions.</p>
+        <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list.
+          Emily is experienced in delivering large collaborative international projects, and feels passionately about combining high-quality science and conservation
+          with community engagement. She currently sits on the expert panel for DEFRA’s Ocean Community Empowerment and Nature (OCEAN) Grants Programme.</p>
+      </div>
+    </div>
+  </section>
 
   <footer>
-  <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
-    <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
-  </p>
+    <p class="footer-contact">
+      <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+      <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
+      <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
+    </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
-</footer>
+  </footer>
 </body>
 </html>
