--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
     <h1 style="font-size: 2rem; text-align: center;">
       <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-      About Us
+      About UsTEST
       <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
     </h1>
 
