--- a/testimonials.html
+++ b/testimonials.html
@@ -33,48 +33,25 @@
 </div>
 </section>
   
-  <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
+  <section class="testimonials-hero">
+  <div class="testimonials-hero__content">
+    <div class="testimonial">
+      <em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em>
+      <div class="attribution">Sam Manning, The Woodland Trust</div>
+    </div>
 
-  <img src="images/footprints.jpg" alt="Image"
-       style="width: 100%; height: 100%; object-fit: cover; display: block;">
+    <div class="testimonial" style="text-align: right;">
+      <em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em>
+      <div class="attribution">PERSON 2, ORGANISATION 2</div>
+    </div>
 
-  <div style="
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  right: 40%;
-  color: white;
-  font-size: 1rem;
-  text-align: left;">
-  <p style="font-style: italic;">"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
-  <p style="margin-top: 0.5rem; font-weight: bold;">Sam Manning, The Woodland Trust</p>
-</div>
-
-<div style="
-  position: absolute;
-  top: 40%;
-  left: 40%;
-  right: 10%;
-  color: white;
-  font-size: 1rem;
-  text-align: right;">
-  <p style="font-style: italic;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-  <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 2, ORGANISATION 2</p>
-</div>
-
-<div style="
-  position: absolute;
-  top: 70%;
-  left: 10%;
-  right: 40%;
-  color: white;
-  font-size: 1rem;
-  text-align: left;">
-  <p style="font-style: italic;">"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-  <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 3, ORGANISATION 3</p>
-</div>
-
+    <div class="testimonial">
+      <em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em>
+      <div class="attribution">PERSON 3, ORGANISATION 3</div>
+    </div>
+  </div>
 </section>
+
 
   <footer>
   <p class="footer-contact">
