--- a/testimonials.html
+++ b/testimonials.html
@@ -22,44 +22,37 @@
   </header>
 
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h1 style="font-size: 2rem; text-align: center;">
-  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  Testimonials
-    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
-</h1>
+    <h1 style="font-size: 2rem; text-align: center;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+      Testimonials
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
+    </h1>
 
-  <div style="padding-left: 15%; padding-right: 15%;">
-  <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
-</div>
-</section>
-  
-  <section class="testimonials-hero">
-  <div class="testimonials-hero__content">
-    <div class="testimonial">
-      <em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em>
-      <div class="attribution">Sam Manning, The Woodland Trust</div>
+    <div class="testimonials-intro">
+      <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
     </div>
+  </section>
 
-    <div class="testimonial" style="text-align: right;">
-      <em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em>
-      <div class="attribution">PERSON 2, ORGANISATION 2</div>
-    </div>
+  <section class="testimonials-quotes">
+    <blockquote>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</blockquote>
+    <div class="attribution">Sam Manning, The Woodland Trust</div>
 
-    <div class="testimonial">
-      <em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em>
-      <div class="attribution">PERSON 3, ORGANISATION 3</div>
-    </div>
-  </div>
-</section>
+    <blockquote style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
+    <div class="attribution" style="text-align:right;">PERSON 2, ORGANISATION 2</div>
 
+    <blockquote>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
+    <div class="attribution">PERSON 3, ORGANISATION 3</div>
+  </section>
+
+  <img src="images/footprints.jpg" alt="Footprints on path" class="testimonials-image">
 
   <footer>
-  <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
-    <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
-  </p>
+    <p class="footer-contact">
+      <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+      <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
+      <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
+    </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
-</footer>
+  </footer>
 </body>
 </html>
