--- a/testimonials.html
+++ b/testimonials.html
@@ -42,9 +42,9 @@
 
     <blockquote>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
     <div class="attribution">PERSON 3, ORGANISATION 3</div>
-  </section>
 
-  <img src="images/footprints.jpg" alt="Footprints on path" class="testimonials-image">
+    <img src="images/footprints.jpg" alt="Footprints on path">
+  </section>
 
   <footer>
     <p class="footer-contact">
