--- a/testimonials.html
+++ b/testimonials.html
@@ -27,8 +27,7 @@
       Testimonials
       <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
     </h1>
-
-    <div class="testimonials-intro">
+    <div>
       <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
     </div>
   </section>
