--- a/testimonials.html
+++ b/testimonials.html
@@ -32,17 +32,17 @@
     </div>
   </section>
 
-  <section class="testimonials-quotes">
+  <section>
     <blockquote>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</blockquote>
-    <div class="attribution">Sam Manning, The Woodland Trust</div>
+    <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
     <blockquote style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
-    <div class="attribution" style="text-align:right;">PERSON 2, ORGANISATION 2</div>
+    <p style="text-align:right;"><strong>PERSON 2, ORGANISATION 2</strong></p>
 
     <blockquote>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
-    <div class="attribution">PERSON 3, ORGANISATION 3</div>
+    <p><strong>PERSON 3, ORGANISATION 3</strong></p>
 
-    <img src="images/footprints.jpg" alt="Footprints on path">
+    <img src="images/footprints.jpg" alt="Footprints on path" class="section-image">
   </section>
 
   <footer>
