--- a/testimonials.html
+++ b/testimonials.html
@@ -33,13 +33,13 @@
   </section>
 
   <section>
-    <blockquote>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</blockquote>
+    <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
     <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
-    <blockquote style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
+    <p style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p style="text-align:right;"><strong>PERSON 2, ORGANISATION 2</strong></p>
 
-    <blockquote>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</blockquote>
+    <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
 
     <img src="images/footprints.jpg" alt="Footprints on path" class="section-image">
