--- a/testimonials.html
+++ b/testimonials.html
@@ -33,7 +33,9 @@
   </section>
 
   <section>
-    <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
+  <div class="sidepicture-section">
+    <div class="sidepicture-text">
+      <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
     <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
     <p style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
@@ -41,9 +43,11 @@
 
     <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
-
+      
+    </div>
     <img src="images/footprints.jpg" alt="Footprints on path" class="section-image">
-  </section>
+  </div>
+</section>
 
   <footer>
     <p class="footer-contact">
