--- a/testimonials.html
+++ b/testimonials.html
@@ -38,8 +38,8 @@
       <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
     <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
-    <p style="text-align:right;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p style="text-align:right;"><strong>PERSON 2, ORGANISATION 2</strong></p>
+    <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+    <p><strong>PERSON 2, ORGANISATION 2</strong></p>
 
     <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
