--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact Apex Science & Conservation Consultancy." />
   <title>Contact | Apex Science & Conservation Consultancy</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.cleaned.css">
 </head>
 <body>
   <header>
@@ -21,36 +21,34 @@
     </nav>
   </header>
 
-  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
-  <h1 style="font-size: 2rem; text-align: center;">
-  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  Contact Us
-    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-</h1>
-  <p style="max-width: 600px; margin: 0.5rem auto 1.5rem;">
-    Whether you have a project in mind, or simply want to learn more about how we can support your work, we'd love to hear from you.
-  </p>
+  <section class="container-md text-center">
+    <h1 class="page-title">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      Contact Us
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+    </h1>
+    <p style="max-width: 600px; margin: 0.5rem auto 1.5rem;">
+      Whether you have a project in mind, or simply want to learn more about how we can support your work, we'd love to hear from you.
+    </p>
 
-  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
+    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
+      <div>
+        <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;" aria-label="Email us">
+          <img src="images/email.png" alt="Email us" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+          <p style="margin: 0; font-weight: 500;">info@apex-science.co.uk</p>
+        </a>
+      </div>
 
-    <div>
-  <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;" aria-label="Email us">
-    <img src="images/email.png" alt="Email us" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
-    <p style="margin: 0; font-weight: 500;">info@apex-science.co.uk</p>
-  </a>
-</div>
-
-<div>
-  <img src="images/linkedin.png" alt="LinkedIn icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
-  <p style="margin: 0; font-weight: 500;">
-    Connect on LinkedIn:
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer">Ben</a> /
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer">Emily</a>
-  </p>
-</div>
-
-  </div>
-</section>
+      <div>
+        <img src="images/linkedin.png" alt="LinkedIn icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+        <p style="margin: 0; font-weight: 500;">
+          Connect on LinkedIn:
+          <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer">Ben</a> /
+          <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer">Emily</a>
+        </p>
+      </div>
+    </div>
+  </section>
 
   <footer>
     &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
